// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Table/DataCell WithAttributes play-test 1`] = `
<div data-test-block="true">
  <td id="htmlId"
      class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  dummyClassname"
      lang="nb"
      data-testid="123ID"
  >
    cake
  </td>
</div>
`;

exports[`Tester/Table/DataCell WithChildren play-test 1`] = `
<div data-test-block="true">
  <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  ">
    cellChildren
  </td>
</div>
`;

exports[`Tester/Table/DataCell WithRef play-test 1`] = `
<div data-test-block="true">
  <td class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  "
      id="dummyIdForwardedFromRef"
  >
    cake
  </td>
</div>
`;

exports[`Tester/Table/DataCell WithThAndScope play-test 1`] = `
<div data-test-block="true">
  <th class="TableDataCell_dataCell__fJqtw TableDataCell_dataCell_standard__ZVYHE TableDataCell_dataCell_left__+6UbM  "
      scope="row"
  >
    cake
  </th>
</div>
`;
